--- a/premium.html
+++ b/premium.html
@@ -147,13 +147,13 @@
 							<li>
 								<img src="images/premium/premium-icon-checkmark-3960210 1.png">
 								<div class="benefit-text">
-										Читати унікальні книги
+										Читати у будь-якому перекладі
 								</div>
 							</li>
 								<li>
 								<img src="images/premium/premium-icon-checkmark-3960210 1.png">
 								<div class="benefit-text">
-									Завантажувати будь-які книги
+									Ділитися книгами*
 								</div>
 							</li>
 						</ul>
@@ -195,7 +195,7 @@
 						</div>
 						<div class="option"><a href="sign_in_or_sign_up.html">Зареєструватися</a></div>
 						<div class="option"><a href="statistics.html#statistics-page-third-section">Усього користувачів</a></div>
-						<div class="option"><a href="#third-part-index-page">Переваги</a></div>
+						<div class="option"><a href="index.html#third-part-index-page">Переваги</a></div>
 						<div class="option"><a href="premium.html">Преміум</a></div>
 					</div>
 					<div class="book-options">
