--- a/statistics.html
+++ b/statistics.html
@@ -217,7 +217,7 @@
 						</div>
 						<div class="option"><a href="sign_in_or_sign_up.html">Зареєструватися</a></div>
 						<div class="option"><a href="statistics.html#statistics-page-third-section">Усього користувачів</a></div>
-						<div class="option"><a href="#third-part-index-page">Переваги</a></div>
+						<div class="option"><a href="index.html#third-part-index-page">Переваги</a></div>
 						<div class="option"><a href="premium.html">Преміум</a></div>
 					</div>
 					<div class="book-options">
