--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
 					<div class="list-options-menu">
 						<ul class="list-options">
 							<li><a href="index.html">Головна</a></li>
-							<li><a href="statistics.html">Статистичні дані</a></li>
+							<li><a href="statistics.html">Статистика</a></li>
 							<li><a href="about.html">Про нас</a></li>
 							<li><a href="premium.html">Преміум</a></li>
 						</ul>
